--- a/Reverberator_API/Reverberator_API.csproj
+++ b/Reverberator_API/Reverberator_API.csproj
@@ -12,4 +12,9 @@
     <Folder Include="Model\" />
   </ItemGroup>
 
+  <PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
+  </PropertyGroup>
+
 </Project>
